--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "nasc-touchbar",
     "displayName": "Nasc VSCode Touchbar",
     "description": "Adds useful tools to your macbook touchbar.",
-    "version": "1.0.0",
-    "publisher": "felipenmoura",
+    "version": "1.2.0",
+    "publisher": "felipe",
     "engines": {
         "vscode": "^1.17.0"
     },
@@ -16,7 +16,10 @@
         "touch bar",
         "touchbar",
         "vscode",
-        "visual studio code"
+        "visual studio code",
+        "macbook pro",
+        "developers",
+        "buttons"
     ],
     "activationEvents": [
         "onCommand:nasc.touchBar.goToDefinition",
@@ -94,6 +97,7 @@
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "node ./node_modules/vscode/bin/test"
     },
+    "icon": "nasc-macbook-pro-vscode-touch-bar.jpg",
     "devDependencies": {
         "typescript": "^2.5.2",
         "vscode": "^1.1.5",
