--- a/package.json
+++ b/package.json
@@ -62,6 +62,11 @@
                 "command": "workbench.action.showCommands",
                 "group": "nasc",
                 "title": ">_"
+            },
+            {
+                "command": "editor.action.rename",
+                "group": "nasc",
+                "title": "✎_"
             }
         ],
         "menus": {
@@ -80,6 +85,10 @@
                 },
                 {
                     "command": "workbench.action.toggleSidebarVisibility",
+                    "group": "nasc"
+                },
+                {
+                    "command": "editor.action.rename",
                     "group": "nasc"
                 },
                 {
