--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nasc-touchbar",
     "displayName": "Nasc VSCode Touchbar",
-    "description": "Adds useful tools to your macbook touchbar.",
+    "description": "Adds useful tools to your Macbook touchbar.",
     "version": "1.5.0",
     "publisher": "felipe",
     "engines": {
@@ -110,7 +110,7 @@
         },
         "configuration": [
             {
-                "title": "Something",
+                "title": "Nasc Touch Bar Settings",
                 "type": "object",
                 "properties": {
                     "nasc-touchbar.goToDefinition": {
